floripa_Junho_2020/svc/ingress-kong.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kong-tdc-ingress
  namespace: kong
spec:
  backend:
    serviceName: kong
    servicePort: 80
